--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <body background="https://img.carstuff.com.tw/images/stories/2015/Eddie/0910/B-1.jpg">
 <div style="background-color:#DDAA00;"text align="center"><h1>關卡推薦啦!</h1></div></head>
-<center><a href=""></center>
+<center><a href="https://1110832079.github.io/report1/"></center>
 <center><a href=""></center>
 <center><a href=""></center>
 <center><a href=""></center>
