--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>關卡推薦啦!</title>
+	<title>我的GTA的鍾愛名單</title>
 </head>
 <body>
 <body background="https://img.carstuff.com.tw/images/stories/2015/Eddie/0910/B-1.jpg">
-<div style="background-color:#DDAA00;"text align="center"><h1>關卡推薦啦!</h1></div></head>
+<div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
 <center><a href="https://1110832079.github.io/report1/" style="color: black"><h2>第一章</h2></a></center>
 <center><a href="https://1110832079.github.io/report2/" style="color: black"><h2>第二章</h2></a></center>
 <center><a href="https://1110832079.github.io/report3/" style="color: black"><h2>第三章</h2></a></center>
