--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <center><a href="https://1110832079.github.io/report3/" style="color: white"><h2>第三章</h2></a></center>
 <center><a href="https://1110832079.github.io/report4/" style="color: white"><h2>第四章</h2></a></center>
 <center><a href="https://1110832079.github.io/report5/" style="color: white"><h2>第五章</h2></a></center>
-<center><a href="https://1110832079.github.io/report6666/" style="color: white"><h2>上一頁</h2></a></center>
+<center><a href="https://1110832079.github.io/report6666/" style="color: red"><h3>上一頁</h3></a></center>
 </body>
 </html>
