--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body background="https://img.carstuff.com.tw/images/stories/2015/Eddie/0910/B-1.jpg">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
 <center><a href="https://1110832079.github.io/report6666/" style="color: red"><h3>上一頁</h3></a></center>
-<center><a href="https://1110832079.github.io/report1/" style="color: white"><h2>第一章</h2></a></center>
-<center><a href="https://1110832079.github.io/report2/" style="color: white"><h2>第二章</h2></a></center>
-<center><a href="https://1110832079.github.io/report3/" style="color: white"><h2>第三章</h2></a></center>
-<center><a href="https://1110832079.github.io/report4/" style="color: white"><h2>第四章</h2></a></center>
-<center><a href="https://1110832079.github.io/report5/" style="color: white"><h2>第五章</h2></a></center>
+<left><a href="https://1110832079.github.io/report1/" style="color: white"><h2>第一章</h2></a></left>
+<left><a href="https://1110832079.github.io/report2/" style="color: white"><h2>第二章</h2></a></left>
+<left><a href="https://1110832079.github.io/report3/" style="color: white"><h2>第三章</h2></a></left>
+<left><a href="https://1110832079.github.io/report4/" style="color: white"><h2>第四章</h2></a></left>
+<left><a href="https://1110832079.github.io/report5/" style="color: white"><h2>第五章</h2></a></left>
 </body>
 </html>
