--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>我的GTA的鍾愛名單</title>
 </head>
 <body>
-<body background="https://i.pinimg.com/originals/af/90/15/af9015a10daaf4e62553c922500ca6fb.jpg">
+<body background="">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
 <center><a href="https://1110832079.github.io/report6666/" style="color: red"><h3>上一頁</h3></a></center>
 <left><a href="https://1110832079.github.io/report1/" style="color: white"><h2>第一章</h2></a></left>
