--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>我的GTA的鍾愛名單</title>
 </head>
 <body>
-<body background="">
+<body background="https://img.4gamers.com.tw/ckfinder/images/ALIEN/2020-10/crackdown3%20(2).jpg?versionId=THoqchHnfx5XpAWjc_xGBDU8zZJiBDQ9">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
 <center><a href="https://1110832079.github.io/report6666/" style="color: red"><h3>上一頁</h3></a></center>
 <left><a href="https://1110832079.github.io/report1/" style="color: white"><h2>第一章</h2></a></left>
