--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title>我的GTA的鍾愛名單</title>
 </head>
 <body>
-<body background="https://img.4gamers.com.tw/ckfinder/images/ALIEN/2020-10/crackdown3%20(2).jpg?versionId=THoqchHnfx5XpAWjc_xGBDU8zZJiBDQ9">
+<body background="https://www.carstuff.com.tw/media/k2/items/cache/bd746d3e70f8915d44a2b56f0682cc05_XL.jpg">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
-<center><a href="https://1110832079.github.io/report6666/" style="color: red"><h3>上一頁</h3></a></center>
-<left><a href="https://1110832079.github.io/report1/" style="color: white"><h2>第一章</h2></a></left>
-<left><a href="https://1110832079.github.io/report2/" style="color: white"><h2>第二章</h2></a></left>
-<left><a href="https://1110832079.github.io/report3/" style="color: white"><h2>第三章</h2></a></left>
-<left><a href="https://1110832079.github.io/report4/" style="color: white"><h2>第四章</h2></a></left>
-<left><a href="https://1110832079.github.io/report5/" style="color: white"><h2>第五章</h2></a></left>
+<left><a href="https://1110832079.github.io/report1/" style="color: orange"><h2>第一章</h2></a></left>
+<left><a href="https://1110832079.github.io/report2/" style="color: orange"><h2>第二章</h2></a></left>
+<left><a href="https://1110832079.github.io/report3/" style="color: orange"><h2>第三章</h2></a></left>
+<left><a href="https://1110832079.github.io/report4/" style="color: orange"><h2>第四章</h2></a></left>
+<left><a href="https://1110832079.github.io/report5/" style="color: ornage"><h2>第五章</h2></a></left>
+<center><a href="https://1110832079.github.io/report6666/" style="color: red"><h2>上一頁</h2></a></center>
 <left><h2>作者：陳彥廷</h2></left>
 </body>
 </html>
