--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>我的GTA的鍾愛名單</title>
 </head>
 <body>
-<body background="https://www.carstuff.com.tw/media/k2/items/cache/bd746d3e70f8915d44a2b56f0682cc05_XL.jpg">
+<body background="https://c.wallhere.com/photos/3a/e5/Serial_Experiments_Lain_cyberpunk-1905541.jpg!d">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
 <left><a href="https://1110832079.github.io/report1/" style="color: orange"><h2>第一章</h2></a></left>
 <left><a href="https://1110832079.github.io/report2/" style="color: orange"><h2>第二章</h2></a></left>
@@ -12,6 +12,6 @@
 <left><a href="https://1110832079.github.io/report4/" style="color: orange"><h2>第四章</h2></a></left>
 <left><a href="https://1110832079.github.io/report5/" style="color: ornage"><h2>第五章</h2></a></left>
 <center><a href="https://1110832079.github.io/report6666/" style="color: red"><h2>上一頁</h2></a></center>
-<left><h2>作者：陳彥廷</h2></left>
+<font color="yellow"><left><h2>作者：陳彥廷</h2></left><font>
 </body>
 </html>
