--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
 <body background="https://c.wallhere.com/photos/3a/e5/Serial_Experiments_Lain_cyberpunk-1905541.jpg!d">
 <div style="background-color:#DDAA00;"text align="center"><h1>我的GTA的鍾愛名單</h1></div></head>
-<left><a href="https://1110832079.github.io/report1/" style="color: orange"><h2>第一章</h2></a></left>
-<left><a href="https://1110832079.github.io/report2/" style="color: orange"><h2>第二章</h2></a></left>
-<left><a href="https://1110832079.github.io/report3/" style="color: orange"><h2>第三章</h2></a></left>
-<left><a href="https://1110832079.github.io/report4/" style="color: orange"><h2>第四章</h2></a></left>
-<left><a href="https://1110832079.github.io/report5/" style="color: ornage"><h2>第五章</h2></a></left>
+<left><a href="https://1110832079.github.io/report1/" style="color: orange"><h1>第一章</h1></a></left>
+<left><a href="https://1110832079.github.io/report2/" style="color: orange"><h1>第二章</h1></a></left>
+<left><a href="https://1110832079.github.io/report3/" style="color: orange"><h1>第三章</h1></a></left>
+<left><a href="https://1110832079.github.io/report4/" style="color: orange"><h1>第四章</h1></a></left>
+<left><a href="https://1110832079.github.io/report5/" style="color: orange"><h1>第五章</h1></a></left>
 <center><a href="https://1110832079.github.io/report6666/" style="color: red"><h2>上一頁</h2></a></center>
 <font color="yellow"><left><h2>作者：陳彥廷</h2></left><font>
 </body>
